--- a/index.html
+++ b/index.html
@@ -26,14 +26,12 @@
 <header>
     <a class="logo" href="/"><img src="assets/img/Logo-0edcff7e.png" alt="Logo" width="100" height="200"></a>
     <ul class="Navbar" id="navbar">
-        <li><svg stroke="currentColor" fill="currentColor" stroke-width="0" viewBox="0 0 24 24" id="darkMode-mobile" class="cursor-pointer" height="1em" width="1em" xmlns="http://www.w3.org/2000/svg"><path d="M20.742 13.045a8.088 8.088 0 0 1-2.077.271c-2.135 0-4.14-.83-5.646-2.336a8.025 8.025 0 0 1-2.064-7.723A1 1 0 0 0 9.73 2.034a10.014 10.014 0 0 0-4.489 2.582c-3.898 3.898-3.898 10.243 0 14.143a9.937 9.937 0 0 0 7.072 2.93 9.93 9.93 0 0 0 7.07-2.929 10.007 10.007 0 0 0 2.583-4.491 1.001 1.001 0 0 0-1.224-1.224zm-2.772 4.301a7.947 7.947 0 0 1-5.656 2.343 7.953 7.953 0 0 1-5.658-2.344c-3.118-3.119-3.118-8.195 0-11.314a7.923 7.923 0 0 1 2.06-1.483 10.027 10.027 0 0 0 2.89 7.848 9.972 9.972 0 0 0 7.848 2.891 8.036 8.036 0 0 1-1.484 2.059z"></path></svg></li>
-        <li><a href="/" title="Home" class="active">Home</a></li>
+         <li><a href="/" title="Home" class="active">Home</a></li>
         <li><a href="/#Services" title="Services" class="">Services</a></li>
         <li><a href="/#Why-us" title="why us" class="">Why us</a></li>
         <li><a href="/#blogs" title="Blog" class="">Blogs</a></li>
         <li class="hover:scale-[1.1] transition-all ease duration-500 md:mt-0"><a class="contact-btn text-white hover:scale-[1.1]" href="#Contact">Contact us</a></li>
-        <li><svg stroke="currentColor" fill="currentColor" stroke-width="0" viewBox="0 0 24 24" id="darkMode" class="cursor-pointer" height="1em" width="1em" xmlns="http://www.w3.org/2000/svg"><path d="M20.742 13.045a8.088 8.088 0 0 1-2.077.271c-2.135 0-4.14-.83-5.646-2.336a8.025 8.025 0 0 1-2.064-7.723A1 1 0 0 0 9.73 2.034a10.014 10.014 0 0 0-4.489 2.582c-3.898 3.898-3.898 10.243 0 14.143a9.937 9.937 0 0 0 7.072 2.93 9.93 9.93 0 0 0 7.07-2.929 10.007 10.007 0 0 0 2.583-4.491 1.001 1.001 0 0 0-1.224-1.224zm-2.772 4.301a7.947 7.947 0 0 1-5.656 2.343 7.953 7.953 0 0 1-5.658-2.344c-3.118-3.119-3.118-8.195 0-11.314a7.923 7.923 0 0 1 2.06-1.483 10.027 10.027 0 0 0 2.89 7.848 9.972 9.972 0 0 0 7.848 2.891 8.036 8.036 0 0 1-1.484 2.059z"></path></svg></li>
-    </ul>
+     </ul>
     <div class="menu-icon" id="menu-icon"><span id="menuSpan">Menu</span></div>
 </header>
     <div id="root">
@@ -266,7 +264,7 @@
 
 
 
-<script type="text/javascript" src="assets/js/app1.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <script type="text/javascript" src="assets/js/index-0a6dd84c.js"></script>
 <script type="text/javascript" src="assets/js/beacon.min.js"></script>
 <script type="text/javascript" src="assets/js/bootstrap.js"></script>
@@ -311,6 +309,12 @@
         }
     }
     })
+
+    $(document).ready(function() {
+    $("#menuSpan").click(function() {
+        $("#navbar").toggleClass("open"); // This toggles the visibility of the navbar
+    });
+});
 </Script>
 </div>
 </body>
