fix redirect issue
fix redirect issue

--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
     <a class="logo" href="/"><img src="assets/img/Logo-0edcff7e.png" alt="Logo" width="100" height="200"></a>
     <ul class="Navbar" id="navbar">
          <li><a href="/" title="Home" class="active">Home</a></li>
-        <li><a href="/#Services" title="Services" class="">Services</a></li>
-        <li><a href="/#Why-us" title="why us" class="">Why us</a></li>
-        <li><a href="/#blogs" title="Blog" class="">Blogs</a></li>
+        <li><a href="#Services" title="Services" class="">Services</a></li>
+        <li><a href="#Why-us" title="why us" class="">Why us</a></li>
+        <li><a href="#blogs" title="Blog" class="">Blogs</a></li>
         <li class="hover:scale-[1.1] transition-all ease duration-500 md:mt-0"><a class="contact-btn text-white hover:scale-[1.1]"href="https://wa.me/6582286226?text=Hi%2C%20I%20am%20interested%20in%20your%20services" target="_blank">Contact us</a></li>
      </ul>
     <div class="menu-icon" id="menu-icon"><span id="menuSpan">Menu</span></div>
