--- a/index.html
+++ b/index.html
@@ -277,8 +277,9 @@
                         <li><a href="#Services" title="Services">Services</a></li>
                         <li><a href="#Why-us" title="Testimonials">Why us</a></li>
                         <li><a href="#blogs" title="Blogs">Blogs</a></li>
-                        <li><a href="#Contact" title="contact">Contact Us</a></li>
+                        <li><a href="https://wa.me/6582286226?text=Hi%2C%20I%20am%20interested%20in%20your%20services" target="_blank">Contact Us</a></li>
                     </ul>
+                    
                 </div>
             </div>
             <div class="footer-links">
