--- a/.github/workflows/index.html
+++ b/.github/workflows/index.html
@@ -27,8 +27,8 @@
     <ul class="Navbar" id="navbar">
         <li><svg stroke="currentColor" fill="currentColor" stroke-width="0" viewBox="0 0 24 24" id="darkMode-mobile" class="cursor-pointer" height="1em" width="1em" xmlns="http://www.w3.org/2000/svg"><path d="M20.742 13.045a8.088 8.088 0 0 1-2.077.271c-2.135 0-4.14-.83-5.646-2.336a8.025 8.025 0 0 1-2.064-7.723A1 1 0 0 0 9.73 2.034a10.014 10.014 0 0 0-4.489 2.582c-3.898 3.898-3.898 10.243 0 14.143a9.937 9.937 0 0 0 7.072 2.93 9.93 9.93 0 0 0 7.07-2.929 10.007 10.007 0 0 0 2.583-4.491 1.001 1.001 0 0 0-1.224-1.224zm-2.772 4.301a7.947 7.947 0 0 1-5.656 2.343 7.953 7.953 0 0 1-5.658-2.344c-3.118-3.119-3.118-8.195 0-11.314a7.923 7.923 0 0 1 2.06-1.483 10.027 10.027 0 0 0 2.89 7.848 9.972 9.972 0 0 0 7.848 2.891 8.036 8.036 0 0 1-1.484 2.059z"></path></svg></li>
         <li><a href="/" title="Home" class="active">Home</a></li>
-        <li><a href="/#Services" title="Services" class="">Services</a></li>
-        <li><a href="/#Why-us" title="why us" class="">Why us</a></li>
+        <li><a href="#Services" title="Services" class="">Services</a></li>
+        <li><a href="#Why-us" title="why us" class="">Why us</a></li>
         <li><a href="/blogs" title="Blog" class="">Blogs</a></li>
         <li class="hover:scale-[1.1] transition-all ease duration-500 md:mt-0"><a class="contact-btn text-white hover:scale-[1.1]" href="#Contact">Contact us</a></li>
         <li><svg stroke="currentColor" fill="currentColor" stroke-width="0" viewBox="0 0 24 24" id="darkMode" class="cursor-pointer" height="1em" width="1em" xmlns="http://www.w3.org/2000/svg"><path d="M20.742 13.045a8.088 8.088 0 0 1-2.077.271c-2.135 0-4.14-.83-5.646-2.336a8.025 8.025 0 0 1-2.064-7.723A1 1 0 0 0 9.73 2.034a10.014 10.014 0 0 0-4.489 2.582c-3.898 3.898-3.898 10.243 0 14.143a9.937 9.937 0 0 0 7.072 2.93 9.93 9.93 0 0 0 7.07-2.929 10.007 10.007 0 0 0 2.583-4.491 1.001 1.001 0 0 0-1.224-1.224zm-2.772 4.301a7.947 7.947 0 0 1-5.656 2.343 7.953 7.953 0 0 1-5.658-2.344c-3.118-3.119-3.118-8.195 0-11.314a7.923 7.923 0 0 1 2.06-1.483 10.027 10.027 0 0 0 2.89 7.848 9.972 9.972 0 0 0 7.848 2.891 8.036 8.036 0 0 1-1.484 2.059z"></path></svg></li>
@@ -46,7 +46,7 @@
                     <div class="home-text">
                         <h1 style="translate: none; rotate: none; scale: none; transform: translate(0px, 0px); opacity: 1; visibility: inherit;">Empowering Solutions <br>For All Your Needs<div></div></h1>
                         <p>Whether it’s fixing a simple connection glitch or overseeing critical systems, we’ve got your tech covered—so you can zero in on what matters most: growing your business and delighting your customers.</p>
-                        <div class="home-btn"><a href="/#Services" class="btn">Find Us To Get More Information</a></div></div>
+                        <div class="home-btn"><a href="#Services" class="btn">Find Us To Get More Information</a></div></div>
                     <div class="home-img" style="translate: none; rotate: none; scale: none; transform: translate(0px, 0px); opacity: 1; visibility: inherit;"><img src="assets/img/img1.svg"></div>
             </div>
         </div>
