--- a/blog-tool.html
+++ b/blog-tool.html
@@ -24,12 +24,12 @@
 </head>
 <body>
 <header>
-    <a class="logo" href="/"><img src="assets/img/Logo-0edcff7e.png" alt="Logo" width="100" height="200"></a>
+    <a class="logo" href="index.html"><img src="assets/img/Logo-0edcff7e.png" alt="Logo" width="100" height="200"></a>
     <ul class="Navbar" id="navbar">
          <li><a href="/" title="Home" class="active">Home</a></li>
-        <li><a href="/#Services" title="Services" class="">Services</a></li>
-        <li><a href="/#Why-us" title="why us" class="">Why us</a></li>
-        <li><a href="/#blogs" title="Blog" class="">Blogs</a></li>
+        <li><a href="index.html#Services" title="Services" class="">Services</a></li>
+        <li><a href="index.html#Why-us" title="why us" class="">Why us</a></li>
+        <li><a href="index.html#blogs" title="Blog" class="">Blogs</a></li>
         <li class="hover:scale-[1.1] transition-all ease duration-500 md:mt-0"><a class="contact-btn text-white hover:scale-[1.1]"href="https://wa.me/6582286226?text=Hi%2C%20I%20am%20interested%20in%20your%20services" target="_blank">Contact us</a></li>
      </ul>
     <div class="menu-icon" id="menu-icon"><span id="menuSpan">Menu</span></div>
@@ -84,11 +84,11 @@
                 <div class="footer-links">
                     <h3 class="font-semibold ">Site map</h3>
                     <ul>
-                        <li><a href="/" title="Home">Home</a></li>
-                        <li><a href="#Services" title="Services">Services</a></li>
-                        <li><a href="#Why-us" title="Testimonials">Why us</a></li>
-                        <li><a href="#blogs" title="Blogs">Blogs</a></li>
-                        <li><a href="#Contact" title="contact">Contact Us</a></li>
+                        <li><a href="index.html" title="Home">Home</a></li>
+                        <li><a href="index.html#Services" title="Services">Services</a></li>
+                        <li><a href="index.html#Why-us" title="Testimonials">Why us</a></li>
+                        <li><a href="index.html#blogs" title="Blogs">Blogs</a></li>
+                        <li><a href="https://wa.me/6582286226?text=Hi%2C%20I%20am%20interested%20in%20your%20services" target="_blank">Contact Us</a></li>
                     </ul>
                 </div>
             </div>
