update service detail
update service detail

--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
 </head>
 <body>
 <header>
-    <a class="logo" href="/"><img src="assets/img/Logo-0edcff7e.png" alt="Logo" width="100" height="200"></a>
+    <a class="logo" href="index.html"><img src="assets/img/Logo-0edcff7e.png" alt="Logo" width="100" height="200"></a>
     <ul class="Navbar" id="navbar">
-         <li><a href="/" title="Home" class="active">Home</a></li>
+         <li><a href="index.html" title="Home" class="active">Home</a></li>
         <li><a href="#Services" title="Services" class="">Services</a></li>
         <li><a href="#Why-us" title="why us" class="">Why us</a></li>
         <li><a href="#blogs" title="Blog" class="">Blogs</a></li>
@@ -61,31 +61,34 @@
                         <div class="box col-6" id="box-1" style="translate: none; rotate: none; scale: none; transform: translate(0px, 0px); opacity: 1; visibility: inherit;">
                             <div class="box-img"><img src="assets/img/services-managed-services-142c7029.svg" alt="Managed Services"></div>
                             <h3>Managed </h3>
-                            <p class="mb-4">We handle your IT infrastructure, monitoring, and management, keeping everything running smoothly so you can focus on driving success.</p></div>
+                            <p class="mb-4">We handle your IT infrastructure, monitoring, and management, keeping everything running smoothly so you can focus on driving success.</p>
+                            <a href="manage.html" class="box-btn2"><button class="btn-class-name "><span class="text-white">Learn More</span><svg xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 320 512" fill="white"><path d="M310.6 233.4c12.5 12.5 12.5 32.8 0 45.3l-192 192c-12.5 12.5-32.8 12.5-45.3 0s-12.5-32.8 0-45.3L242.7 256 73.4 86.6c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0l192 192z"></path></svg></button></a>
+                        </div>
                     </div>
                     <div class="item">
                         <div class="box col-6" id="box-1" style="translate: none; rotate: none; scale: none; transform: translate(0px, 0px); opacity: 1; visibility: inherit;">
                             <div class="box-img"><img src="assets/img/services-managed-services-142c7029.svg" alt="Managed Services"></div>
-                            <h3>Support </h3>
-                            <p class="mb-4">Our approachable, expert technicians are just a call away, ready to deliver swift on-site or remote support. We keep your team moving, minimizing downtime and maximizing productivity.</p></div>
+                            <h3>Web Development</h3>
+                            <p class="mb-4">Skilled web developer with expertise in creating responsive, user-friendly websites and web applications. Proficient in front-end and back-end technologies, including HTML, CSS, JavaScript, React, and Node.js, with a focus on delivering high-performance, secure, and SEO-optimized solutions tailored to meet client needs.</p>
+                            <a href="Webdev.html" class="box-btn2"><button class="btn-class-name "><span class="text-white">Learn More</span><svg xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 320 512" fill="white"><path d="M310.6 233.4c12.5 12.5 12.5 32.8 0 45.3l-192 192c-12.5 12.5-32.8 12.5-45.3 0s-12.5-32.8 0-45.3L242.7 256 73.4 86.6c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0l192 192z"></path></svg></button></a>
+                        </div>
                     </div>
                     <div class="item">
                         <div class="box col-6" id="box-1" style="translate: none; rotate: none; scale: none; transform: translate(0px, 0px); opacity: 1; visibility: inherit;">
                             <div class="box-img"><img src="assets/img/services-managed-services-142c7029.svg" alt="Managed Services"></div>
-                            <h3>Build Your Dream IT Team</h3>
-                            <p class="mb-4">Handpick from a select pool of seasoned IT experts, ready to join your ranks for short-term projects or long-term partnerships.</p></div>
+                            <h3>Server Hosting</h3>
+                            <p class="mb-4">Our server hosting service provides reliable, high-speed hosting solutions for websites and applications. With options like shared, VPS, and dedicated hosting, we ensure fast performance, strong security, and 24/7 support to keep your online presence running smoothly. Perfect for businesses of all sizes looking for scalable and secure hosting</p>
+                            <a href="server.html" class="box-btn2"><button class="btn-class-name "><span class="text-white">Learn More</span><svg xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 320 512" fill="white"><path d="M310.6 233.4c12.5 12.5 12.5 32.8 0 45.3l-192 192c-12.5 12.5-32.8 12.5-45.3 0s-12.5-32.8 0-45.3L242.7 256 73.4 86.6c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0l192 192z"></path></svg></button></a>
+                        
+                        </div>
                     </div>
                     <div class="item">
                         <div class="box col-6" id="box-1" style="translate: none; rotate: none; scale: none; transform: translate(0px, 0px); opacity: 1; visibility: inherit;">
                             <div class="box-img"><img src="assets/img/services-managed-services-142c7029.svg" alt="Managed Services"></div>
-                            <h3>Project Management </h3>
-                            <p class="mb-4">From start to finish, our experts take the reins of your IT projects, delivering tailored solutions with speed and precision—so you can sit back and watch your vision come to life.</p></div>
-                    </div>
-                    <div class="item">
-                        <div class="box col-6" id="box-1" style="translate: none; rotate: none; scale: none; transform: translate(0px, 0px); opacity: 1; visibility: inherit;">
-                            <div class="box-img"><img src="assets/img/services-managed-services-142c7029.svg" alt="Managed Services"></div>
-                            <h3>Installation and Provisioning </h3>
-                            <p class="mb-4">Specializing in the installation and provisioning of new IT equipment, our solutions minimize downtime and maximize your team's productivity.</p></div>
+                            <h3>Mobile App Development</h3>
+                            <p class="mb-4">Whether you’re looking to launch a new app or enhance an existing one, our experienced team is here to help. Partner with us for innovative mobile app solutions that will engage users, drive sales, and elevate your brand. Contact us today to discuss your project and get started on your mobile app journey!</p>
+                            <a href="mobile.html" class="box-btn2"><button class="btn-class-name "><span class="text-white">Learn More</span><svg xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 320 512" fill="white"><path d="M310.6 233.4c12.5 12.5 12.5 32.8 0 45.3l-192 192c-12.5 12.5-32.8 12.5-45.3 0s-12.5-32.8 0-45.3L242.7 256 73.4 86.6c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0l192 192z"></path></svg></button></a>
+                        </div>
                     </div>
                 </div>
         </section>
