--- a/manage.html
+++ b/manage.html
@@ -119,7 +119,7 @@ ul
                     </ul>
                     </li><br></ul>
                     <div class="" type="button" aria-haspopup="dialog" aria-expanded="false" aria-controls="radix-:rc:" data-state="closed">
-                        <div class="box-btn2"><button class="btn-class-name "><span class="text-white">Contact us</span><svg xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 320 512" fill="white"><path d="M310.6 233.4c12.5 12.5 12.5 32.8 0 45.3l-192 192c-12.5 12.5-32.8 12.5-45.3 0s-12.5-32.8 0-45.3L242.7 256 73.4 86.6c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0l192 192z"></path></svg></button></div>
+                        <div class="box-btn2"><a href="https://wa.me/6582286226?text=Hi%2C%20I%20am%20interested%20in%20your%20services" target="_blank"><button class="btn-class-name "><span class="text-white">Contact us</span><svg xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 320 512" fill="white"><path d="M310.6 233.4c12.5 12.5 12.5 32.8 0 45.3l-192 192c-12.5 12.5-32.8 12.5-45.3 0s-12.5-32.8 0-45.3L242.7 256 73.4 86.6c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0l192 192z"></path></svg></button></a></div>
                     </div>
                 </div>
             </div>
