--- a/Webdev.html
+++ b/Webdev.html
@@ -52,7 +52,7 @@ ul
                 <h1 style="translate: none; rotate: none; scale: none; transform: translate(0px, 0px); opacity: 1; visibility: inherit;">Web Development Services</h1>
                 <p>In today’s digital age, a powerful online presence is essential for business success. Our web development services are designed to create engaging, responsive, and high-performance websites that drive growth and enhance customer experiences. From sleek, user-friendly designs to robust backend solutions, our team of expert developers is equipped to turn your vision into a reality. </p></a></div>
             <div
-                class="home-img" style="translate: none; rotate: none; scale: none; opacity: 1; visibility: inherit;"><img src="/assets/img/services-managed-services-142c70291.svg" alt="IT Managed Services"></div>
+                class="home-img" style="translate: none; rotate: none; scale: none; opacity: 1; visibility: inherit;"><img src="/assets/img/webdeve.png" alt="Web Development Services"></div>
         </section>
 
         <section class="services snap-none" id="how">
@@ -60,7 +60,7 @@ ul
                 <h1 style="translate: none; rotate: none; scale: none; transform: translate(0px, 0px); opacity: 1; visibility: inherit;">Why Choose Our Web Development Services?</h1>
             </div>
             <div class="justify-between flex flex-wrap place-items-start items-center mt-20">
-                <div class="w-full md:w-2/5 lg:w-2/5 px-4"><img src="assets/img/Analysis-1bfb26fa.svg" alt="IT Infrastructure" class="inline-block"></div>
+                <div class="w-full md:w-2/5 lg:w-2/5 px-4"><img src="assets/img/web2.png" alt="Web Infrastructure" class="inline-block"></div>
                 <div class="w-full md:w-2/5 lg:w-1/2 md:text-left  md:order-first ">
                     <ul>
                         <li class="flex items-start w-4/5  lg:col-span-1">
