--- a/blog-Sec.html
+++ b/blog-Sec.html
@@ -22,6 +22,12 @@
     <link rel='stylesheet' type='text/css' href='assets/css/owl.theme.default.min.css' media='screen' />
     <script type="text/javascript" src="assets/js/3.3.1/jquery.min.js"></script>
 </head>
+<style>
+    #root 
+    {
+    overflow: auto;
+    }
+    </style>
 <body>
 <header>
     <a class="logo" href="index.html"><img src="assets/img/Logo-0edcff7e.png" alt="Logo" width="100" height="200"></a>
@@ -47,7 +53,7 @@
                             <h1 class="md:text-4xl text-4xl w-full font-bold  mb-4 leading-10">The Importance of Cybersecurity in Today's Digital Landscape</h1>
                             <p class="text-gray-500 text-sm">Posted on: 15 October 2024 </p>
                         </div>
-                        <div class="md:flex block my-2"><img src="assets/img/Blog_9.jpg" loading="lazy" alt="IT Help Desk Support " class="w-full h-full object-cover mb-8 rounded-xl"></div>
+                        <div class="md:flex block my-2"><img src="assets/img/post2.jpg" loading="lazy" alt="IT Help Desk Support " class="w-full h-full object-cover mb-8 rounded-xl"></div>
                         In an era where our lives are increasingly intertwined with technology, cybersecurity has become a critical concern for individuals and organizations alike. With cyber threats evolving in sophistication and frequency, protecting sensitive information is more crucial than ever.
                         <br><br>
                         <p class="text-slate-600 text-md" style="white-space: pre-wrap;"><b>The Rising Threat Landscape </b><br><br></p>
