--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                         <h1>Empowering Solutions <br>For All Your Needs<div></div></h1>
                         <p>Whether it’s fixing a simple connection glitch or overseeing critical systems, we’ve got your tech covered—so you can zero in on what matters most: growing your business and delighting your customers.</p>
                         <div class="home-btn"><a href="https://wa.me/6582286226?text=Hi%2C%20I%20am%20interested%20in%20your%20services" target="_blank" class="btn">Find Us To Get More Information</a></div></div>
-                    <div class="home-img" data-aos="fade-left"><img src="assets/img/img1.svg"></div>
+                    <div class="home-img" data-aos="fade-left"><img src="assets/img/home1.png" ALT="Home Image"></div>
             </div>
 
 
@@ -59,7 +59,7 @@
                 <div id="caro2" class="owl-carousel owl-theme" >
                     <div class="item">
                         <div class="box col-6" id="box-1" style="translate: none; rotate: none; scale: none; transform: translate(0px, 0px); opacity: 1; visibility: inherit;">
-                            <div class="box-img"><img src="assets/img/services-managed-services-142c7029.svg" alt="Managed Services"></div>
+                            <div class="box-img"><img src="assets/img/manage.png" alt="Managed Services"></div>
                             <h3>Managed </h3>
                             <p class="mb-4">We handle your IT infrastructure, monitoring, and management, keeping everything running smoothly so you can focus on driving success.</p>
                             <a href="manage.html" class="box-btn2"><button class="btn-class-name "><span class="text-white">Learn More</span><svg xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 320 512" fill="white"><path d="M310.6 233.4c12.5 12.5 12.5 32.8 0 45.3l-192 192c-12.5 12.5-32.8 12.5-45.3 0s-12.5-32.8 0-45.3L242.7 256 73.4 86.6c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0l192 192z"></path></svg></button></a>
@@ -67,7 +67,7 @@
                     </div>
                     <div class="item">
                         <div class="box col-6" id="box-1" style="translate: none; rotate: none; scale: none; transform: translate(0px, 0px); opacity: 1; visibility: inherit;">
-                            <div class="box-img"><img src="assets/img/services-managed-services-142c7029.svg" alt="Managed Services"></div>
+                            <div class="box-img"><img src="assets/img/webdeve.png" alt="Development"></div>
                             <h3>Web Development</h3>
                             <p class="mb-4">Skilled web developer with expertise in creating responsive, user-friendly websites and web applications. Proficient in front-end and back-end technologies, including HTML, CSS, JavaScript, React, and Node.js, with a focus on delivering high-performance, secure, and SEO-optimized solutions tailored to meet client needs.</p>
                             <a href="Webdev.html" class="box-btn2"><button class="btn-class-name "><span class="text-white">Learn More</span><svg xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 320 512" fill="white"><path d="M310.6 233.4c12.5 12.5 12.5 32.8 0 45.3l-192 192c-12.5 12.5-32.8 12.5-45.3 0s-12.5-32.8 0-45.3L242.7 256 73.4 86.6c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0l192 192z"></path></svg></button></a>
@@ -75,7 +75,7 @@
                     </div>
                     <div class="item">
                         <div class="box col-6" id="box-1" style="translate: none; rotate: none; scale: none; transform: translate(0px, 0px); opacity: 1; visibility: inherit;">
-                            <div class="box-img"><img src="assets/img/services-managed-services-142c7029.svg" alt="Managed Services"></div>
+                            <div class="box-img"><img src="assets/img/server.png" alt="server hosting"></div>
                             <h3>Server Hosting</h3>
                             <p class="mb-4">Our server hosting service provides reliable, high-speed hosting solutions for websites and applications. With options like shared, VPS, and dedicated hosting, we ensure fast performance, strong security, and 24/7 support to keep your online presence running smoothly. Perfect for businesses of all sizes looking for scalable and secure hosting</p>
                             <a href="server.html" class="box-btn2"><button class="btn-class-name "><span class="text-white">Learn More</span><svg xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 320 512" fill="white"><path d="M310.6 233.4c12.5 12.5 12.5 32.8 0 45.3l-192 192c-12.5 12.5-32.8 12.5-45.3 0s-12.5-32.8 0-45.3L242.7 256 73.4 86.6c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0l192 192z"></path></svg></button></a>
@@ -84,7 +84,7 @@
                     </div>
                     <div class="item">
                         <div class="box col-6" id="box-1" style="translate: none; rotate: none; scale: none; transform: translate(0px, 0px); opacity: 1; visibility: inherit;">
-                            <div class="box-img"><img src="assets/img/services-managed-services-142c7029.svg" alt="Managed Services"></div>
+                            <div class="box-img"><img src="assets/img/appdevelp.png" alt="Mobile App Development"></div>
                             <h3>Mobile App Development</h3>
                             <p class="mb-4">Whether you’re looking to launch a new app or enhance an existing one, our experienced team is here to help. Partner with us for innovative mobile app solutions that will engage users, drive sales, and elevate your brand. Contact us today to discuss your project and get started on your mobile app journey!</p>
                             <a href="mobile.html" class="box-btn2"><button class="btn-class-name "><span class="text-white">Learn More</span><svg xmlns="http://www.w3.org/2000/svg" height="1em" viewBox="0 0 320 512" fill="white"><path d="M310.6 233.4c12.5 12.5 12.5 32.8 0 45.3l-192 192c-12.5 12.5-32.8 12.5-45.3 0s-12.5-32.8 0-45.3L242.7 256 73.4 86.6c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0l192 192z"></path></svg></button></a>
@@ -110,7 +110,7 @@
                             <div class="flex flex-col w-full text-start md:p-5 py-5 my-5" data-aos="flip-left"
                             data-aos-easing="ease-out-cubic"
                             data-aos-duration="400">
-                                <div class="flex flex-col space-y-3"><img src="assets/img/BudgetSaving-3dc36810.svg" style="margin:auto" alt="Top Tier Skills" class="h-1/2 w-1/2 ">
+                                <div class="flex flex-col space-y-3"><img src="assets/img/benefit1.png" style="margin:auto" alt="IT team" class="h-1/2 w-1/2 ">
                                     <div class="flex gap-3" style="justify-content: center">
                                         <h1 class="text-xl font-bold">Global IT Solutions at Your Fingertips</h1>
                                     </div>
@@ -121,7 +121,7 @@
                         <div class="flex flex-col w-full text-start md:p-5 py-5 my-5" data-aos="flip-left"
                         data-aos-easing="ease-out-cubic"
                         data-aos-duration="800"> 
-                            <div class="flex flex-col space-y-3"><img src="assets/img/BudgetSaving-3dc36810.svg" style="margin:auto" alt="Top Tier Skills" class="h-1/2 w-1/2 ">
+                            <div class="flex flex-col space-y-3"><img src="assets/img/benifit2.png" style="margin:auto" alt="cost saving" class="h-1/2 w-1/2 ">
                                 <div class="flex gap-3" style="justify-content: center">
                                     <h1 class="text-xl font-bold">Cost Efficiency</h1>
                                 </div>
@@ -133,7 +133,7 @@
                         <div class="flex flex-col w-full text-start md:p-5 py-5 my-5" data-aos="flip-left"
                         data-aos-easing="ease-out-cubic"
                         data-aos-duration="1200">
-                            <div class="flex flex-col space-y-3"><img src="assets/img/BudgetSaving-3dc36810.svg" style="margin:auto" alt="Global Reach" class="h-1/2 w-1/2 ">
+                            <div class="flex flex-col space-y-3"><img src="assets/img/benefit3.png" style="margin:auto" alt="Expertise" class="h-1/2 w-1/2 ">
                                 <div class="flex gap-3" style="justify-content: center">
                                     <h1 class="text-xl font-bold">Elite Expertise</h1>
                                 </div>
@@ -144,7 +144,7 @@
                         <div class="flex flex-col w-full text-start md:p-5 py-5 my-5" data-aos="flip-left"
                         data-aos-easing="ease-out-cubic"
                         data-aos-duration="1600">
-                            <div class="flex flex-col space-y-3"><img src="assets/img/BudgetSaving-3dc36810.svg" style="margin:auto" alt="Personalized Services" class="h-1/2 w-1/2 ">
+                            <div class="flex flex-col space-y-3"><img src="assets/img/benefit4.png" style="margin:auto" alt="Local Expertise with a Global Edge" class="h-1/2 w-1/2 ">
                                 <div class="flex gap-3" style="justify-content: center">
                                     <h1 class="text-xl font-bold">Local Expertise with a Global Edge</h1>
                                 </div>
@@ -158,7 +158,7 @@
                         <div class="flex flex-col w-full text-start md:p-5 py-5 my-5" data-aos="flip-left"
                         data-aos-easing="ease-out-cubic"
                         data-aos-duration="2000">
-                            <div class="flex flex-col space-y-3"><img src="assets/img/BudgetSaving-3dc36810.svg" style="margin:auto" alt="Personalized Services" class="h-1/2 w-1/2 ">
+                            <div class="flex flex-col space-y-3"><img src="assets/img/benefit5.png" style="margin:auto" alt="Tailored Solutions" class="h-1/2 w-1/2 ">
                                 <div class="flex gap-3" style="justify-content: center">
                                     <h1 class="text-xl font-bold">Tailored Solutions</h1>
                                 </div>
@@ -172,7 +172,7 @@
                         <div class="flex flex-col w-full text-start md:p-5 py-5 my-5" data-aos="flip-left"
                         data-aos-easing="ease-out-cubic"
                         data-aos-duration="1200">
-                            <div class="flex flex-col space-y-3"><img src="assets/img/BudgetSaving-3dc36810.svg" style="margin:auto" alt="Personalized Services" class="h-1/2 w-1/2 ">
+                            <div class="flex flex-col space-y-3"><img src="assets/img/benefit6.png" style="margin:auto" alt="Personalized Services" class="h-1/2 w-1/2 ">
                                 <div class="flex gap-3" style="justify-content: center">
                                     <h1 class="text-xl font-bold">Rapid Response Times</h1>
                                 </div>
@@ -252,20 +252,20 @@
                             data-aos="flip-left"
                         data-aos-easing="ease-out-cubic"
                         data-aos-duration="400"
-                        ><a href="blog-AI.html" aria-label="blog link"><img src="//images.ctfassets.net/ac47qpsm2pjt/7DfaKk8vbFC92pM3LMAoQ/6263785df64964bf4a297a2d32e18136/blog5.jpg" loading="lazy" class="w-full  p-2 rounded-3xl min-h-[300px] max-h-72 object-cover" alt="Blog Image" width="50" height="50"><div class="p-4 pt-2 h-full flex flex-col "><div class="text-sm my-2  text-gray-500">Posted on: 20 October 2024</div><div><span class="text-gray-900 font-bold text-2xl md:text-2xl mb-4 inline-block ">Transforming IT Help Desk Support with Generative AI:</span></div><p class="text-gray-600 text-md ">Generative AI enhances IT Help Desks by automating responses, resolving issues quickly, and providing 24/7 support. It improves efficiency, reduces costs, and allows human agents to focus on complex problems. With its ability to understand context and interact naturally, generative AI offers a better user experience, making IT support faster and more effective.</p></div></a>
+                        ><a href="blog-AI.html" aria-label="blog link"><img src="/assets/img/post1.jpg" loading="lazy" class="w-full  p-2 rounded-3xl min-h-[300px] max-h-72 object-cover" alt="Blog Image" width="50" height="50"><div class="p-4 pt-2 h-full flex flex-col "><div class="text-sm my-2  text-gray-500">Posted on: 20 October 2024</div><div><span class="text-gray-900 font-bold text-2xl md:text-2xl mb-4 inline-block ">Transforming IT Help Desk Support with Generative AI:</span></div><p class="text-gray-600 text-md ">Generative AI enhances IT Help Desks by automating responses, resolving issues quickly, and providing 24/7 support. It improves efficiency, reduces costs, and allows human agents to focus on complex problems. With its ability to understand context and interact naturally, generative AI offers a better user experience, making IT support faster and more effective.</p></div></a>
                                 <div
                                     class="flex mt-auto p-5"><span class="text-gray-500 underline text-start "><a href="blog-AI.html" aria-label="blog link">Read more</a></span></div>
                         </div>
                         <div id="Blog" data-aos="flip-left"
                         data-aos-easing="ease-out-cubic"
-                        data-aos-duration="800" class="border-r border-b border-l mb-10 lg:border bg-white rounded-xl  flex flex-col leading-normal h-full hover:shadow-2xl cursor-pointer duration-500 "><a href="/blog-Sec.html" aria-label="blog link"><img src="//images.ctfassets.net/ac47qpsm2pjt/781zsre4Xj7aIArCD6Phzs/a295b058d80ca88476d95f95f4a8fc6e/Blog_3.avif" loading="lazy" class="w-full  p-2 rounded-3xl min-h-[300px] max-h-72 object-cover" alt="Blog Image" width="50" height="50"><div class="p-4 pt-2 h-full flex flex-col "><div class="text-sm my-2  text-gray-500">Posted on: 15 October 2024</div><div><span class="text-gray-900 font-bold text-2xl md:text-2xl mb-4 inline-block ">The Importance of Cybersecurity in Today's Digital Landscape</span></div><p class="text-gray-600 text-md "> Cybersecurity is crucial in an increasingly digital world, as cyberattacks target individuals and organizations alike. With threats like ransomware and phishing on the rise, protecting sensitive data is more important than ever. Effective cybersecurity measures safeguard personal information, maintain customer trust, ensure regulatory compliance, and support business continuity. Key practices include regular software updates, employee training, implementing multi-factor authentication, encrypting data, and having an incident response plan. By prioritizing cybersecurity, organizations can protect their assets and secure their digital future amid evolving threats. </p></div></a>
+                        data-aos-duration="800" class="border-r border-b border-l mb-10 lg:border bg-white rounded-xl  flex flex-col leading-normal h-full hover:shadow-2xl cursor-pointer duration-500 "><a href="/blog-Sec.html" aria-label="blog link"><img src="/assets/img/post2.jpg"  loading="lazy" class="w-full  p-2 rounded-3xl min-h-[300px] max-h-72 object-cover" alt="Blog Image" width="50" height="50"><div class="p-4 pt-2 h-full flex flex-col "><div class="text-sm my-2  text-gray-500">Posted on: 15 October 2024</div><div><span class="text-gray-900 font-bold text-2xl md:text-2xl mb-4 inline-block ">The Importance of Cybersecurity in Today's Digital Landscape</span></div><p class="text-gray-600 text-md "> Cybersecurity is crucial in an increasingly digital world, as cyberattacks target individuals and organizations alike. With threats like ransomware and phishing on the rise, protecting sensitive data is more important than ever. Effective cybersecurity measures safeguard personal information, maintain customer trust, ensure regulatory compliance, and support business continuity. Key practices include regular software updates, employee training, implementing multi-factor authentication, encrypting data, and having an incident response plan. By prioritizing cybersecurity, organizations can protect their assets and secure their digital future amid evolving threats. </p></div></a>
                         <div
                         class="flex mt-auto p-5"><span class="text-gray-500 underline text-start "><a href="blog-AI.html" aria-label="blog link">Read more</a></span></div>
                     </div>
                         <div
                             id="Blog" data-aos="flip-left"
                             data-aos-easing="ease-out-cubic"
-                            data-aos-duration="1200" class="border-r border-b border-l mb-10 lg:border bg-white rounded-xl  flex flex-col leading-normal h-full hover:shadow-2xl cursor-pointer duration-500 "><a href="/blog-tool.html" aria-label="blog link"><img src="//images.ctfassets.net/ac47qpsm2pjt/1UEUZR7eWfUyvdh5w7YrfU/ece256561b75ee1c1caad32bd3b22d47/network_security.jpg" loading="lazy" class="w-full  p-2 rounded-3xl min-h-[300px] max-h-72 object-cover" alt="Blog Image" width="50" height="50"><div class="p-4 pt-2 h-full flex flex-col "><div class="text-sm my-2  text-gray-500">Posted on: 10 October 2024</div><div><span class="text-gray-900 font-bold text-2xl md:text-2xl mb-4 inline-block ">Top 5 Tools for Protecting Digital Assets</span></div><p class="text-gray-600 text-md ">These tools are vital for any organization looking to protect its digital assets because they help prevent data breaches, minimize the risk of data loss, and ensure regulatory compliance. By implementing these security solutions, organizations can build a strong defense against ever-evolving cyber threats, safeguard sensitive information, and maintain trust with customers and stakeholders.</p></div></a>
+                            data-aos-duration="1200" class="border-r border-b border-l mb-10 lg:border bg-white rounded-xl  flex flex-col leading-normal h-full hover:shadow-2xl cursor-pointer duration-500 "><a href="/blog-tool.html" aria-label="blog link"><img src="/assets/img/post3.jpg" loading="lazy" class="w-full  p-2 rounded-3xl min-h-[300px] max-h-72 object-cover" alt="Blog Image" width="50" height="50"><div class="p-4 pt-2 h-full flex flex-col "><div class="text-sm my-2  text-gray-500">Posted on: 10 October 2024</div><div><span class="text-gray-900 font-bold text-2xl md:text-2xl mb-4 inline-block ">Top 5 Tools for Protecting Digital Assets</span></div><p class="text-gray-600 text-md ">These tools are vital for any organization looking to protect its digital assets because they help prevent data breaches, minimize the risk of data loss, and ensure regulatory compliance. By implementing these security solutions, organizations can build a strong defense against ever-evolving cyber threats, safeguard sensitive information, and maintain trust with customers and stakeholders.</p></div></a>
                             <div
                             class="flex mt-auto p-5"><span class="text-gray-500 underline text-start "><a href="blog-tool.html" aria-label="blog link">Read more</a></span></div>
                         </div>
