--- a/manage.html
+++ b/manage.html
@@ -52,7 +52,7 @@ ul
                 <h1 style="translate: none; rotate: none; scale: none; transform: translate(0px, 0px); opacity: 1; visibility: inherit;">Managed Services</h1>
                 <p>At Nujitc, our Managed IT Services are crafted to elevate your IT infrastructure, offering comprehensive support and management tailored to your needs. With a focus on proactive monitoring and efficient oversight, we ensure your organization enjoys smooth, uninterrupted operations. Here’s how we make it happen: </p></a></div>
             <div
-                class="home-img" style="translate: none; rotate: none; scale: none; opacity: 1; visibility: inherit;"><img src="/assets/img/services-managed-services-142c70291.svg" alt="IT Managed Services"></div>
+                class="home-img" style="translate: none; rotate: none; scale: none; opacity: 1; visibility: inherit;"><img src="/assets/img/manage.png" alt="IT Managed Services"></div>
         </section>
 
         <section class="services snap-none" id="how">
@@ -60,7 +60,7 @@ ul
                 <h1 style="translate: none; rotate: none; scale: none; transform: translate(0px, 0px); opacity: 1; visibility: inherit;">How We Can Help</h1>
             </div>
             <div class="justify-between flex flex-wrap place-items-start items-center mt-20">
-                <div class="w-full md:w-2/5 lg:w-2/5 px-4"><img src="assets/img/Analysis-1bfb26fa.svg" alt="IT Infrastructure" class="inline-block"></div>
+                <div class="w-full md:w-2/5 lg:w-2/5 px-4"><img src="assets/img/manage2.png" alt="IT Manage" class="inline-block"></div>
                 <div class="w-full md:w-2/5 lg:w-1/2 md:text-left  md:order-first ">
                     <p class="mt-6" style="color: var(--other-color); font-size: calc(var(--p-font) + 7px);">With Nujitc's Managed IT Services, you don’t just get support—you gain a strategic partner dedicated to optimizing your IT landscape and driving your business forward. </p><br>
                     <ul>
