--- a/server.html
+++ b/server.html
@@ -52,7 +52,7 @@ ul
                 <h1 style="translate: none; rotate: none; scale: none; transform: translate(0px, 0px); opacity: 1; visibility: inherit;">Server Hosting</h1>
                 <p>Our server hosting solutions are designed to provide businesses with the power, speed, and reliability they need to thrive online. Whether you’re running a website, e-commerce store, or a complex application, we offer a range of hosting services tailored to your needs, including shared, VPS, and dedicated server options.</p></a></div>
             <div
-                class="home-img" style="translate: none; rotate: none; scale: none; opacity: 1; visibility: inherit;"><img src="/assets/img/services-managed-services-142c70291.svg" alt="IT Managed Services"></div>
+                class="home-img" style="translate: none; rotate: none; scale: none; opacity: 1; visibility: inherit;"><img src="/assets/img/server.png" alt="Server hosting"></div>
         </section>
 
         <section class="services snap-none" id="how">
@@ -60,7 +60,7 @@ ul
                 <h1 style="translate: none; rotate: none; scale: none; transform: translate(0px, 0px); opacity: 1; visibility: inherit;">Features of Our Server Hosting</h1>
             </div>
             <div class="justify-between flex flex-wrap place-items-start items-center mt-20">
-                <div class="w-full md:w-2/5 lg:w-2/5 px-4"><img src="assets/img/Analysis-1bfb26fa.svg" alt="IT Infrastructure" class="inline-block"></div>
+                <div class="w-full md:w-2/5 lg:w-2/5 px-4"><img src="assets/img/server2.png" alt="Server Infrastructure" class="inline-block"></div>
                 <div class="w-full md:w-2/5 lg:w-1/2 md:text-left  md:order-first ">
                     <p class="mt-6" style="color: var(--other-color); font-size: calc(var(--p-font) + 7px);">Choose our server hosting services for a reliable, secure, and high-performing foundation for your online presence.</p><br>
                     <ul>
