--- a/blog-AI.html
+++ b/blog-AI.html
@@ -22,6 +22,12 @@
     <link rel='stylesheet' type='text/css' href='assets/css/owl.theme.default.min.css' media='screen' />
     <script type="text/javascript" src="assets/js/3.3.1/jquery.min.js"></script>
 </head>
+<style>
+    #root 
+    {
+    overflow: auto;
+    }
+    </style>
 <body>
 <header>
     <a class="logo" href="index.html"><img src="assets/img/Logo-0edcff7e.png" alt="Logo" width="100" height="200"></a>
@@ -47,7 +53,7 @@
                             <h1 class="md:text-4xl text-4xl w-full font-bold  mb-4 leading-10">The Rise of Generative AI in IT Support</h1>
                             <p class="text-gray-500 text-sm">Posted on: 20 October 2024 </p>
                         </div>
-                        <div class="md:flex block my-2"><img src="assets/img/Blog_9.jpg" loading="lazy" alt="IT Help Desk Support " class="w-full h-full object-cover mb-8 rounded-xl"></div>
+                        <div class="md:flex block my-2"><img src="/assets/img/post1.jpg" loading="lazy" alt="IT Help Desk Support " class="w-full h-full object-cover mb-8 rounded-xl"></div>
                         <p class="text-slate-600 text-md" style="white-space: pre-wrap;"><b>Generative AI, </b><br><br></p>
                         a subset of artificial intelligence, can generate human-like responses based on the input it receives. Unlike traditional AI, which often relies on pre-defined rules or scripts, generative AI uses machine learning models trained on vast amounts of data. This allows it to understand context, learn from interactions, and offer dynamic responses tailored to individual needs.
                         <br>
