--- a/blog-tool.html
+++ b/blog-tool.html
@@ -22,6 +22,12 @@
     <link rel='stylesheet' type='text/css' href='assets/css/owl.theme.default.min.css' media='screen' />
     <script type="text/javascript" src="assets/js/3.3.1/jquery.min.js"></script>
 </head>
+<style>
+#root 
+{
+overflow: auto;
+}
+</style>
 <body>
 <header>
     <a class="logo" href="index.html"><img src="assets/img/Logo-0edcff7e.png" alt="Logo" width="100" height="200"></a>
@@ -48,7 +54,7 @@
                                 Summary: Top 5 Tools for Protecting Digital Assets</h1>
                             <p class="text-gray-500 text-sm">Posted on: 10 October 2024 </p>
                         </div>
-                        <div class="md:flex block my-2"><img src="assets/img/Blog_9.jpg" loading="lazy" alt="IT Help Desk Support " class="w-full h-full object-cover mb-8 rounded-xl"></div>
+                        <div class="md:flex block my-2"><img src="assets/img/post3.jpg" loading="lazy" alt="IT Help Desk Support " class="w-full h-full object-cover mb-8 rounded-xl"></div>
                         To safeguard digital assets, consider these top five tools:<br> <br>
                         <b>McAfee Total Protection: </b>Offers comprehensive security with antivirus, anti-malware, and identity theft protection, including file encryption and secure cloud storage.
                         <br>
